<resources>
    <string name="app_name">Immigration News - The Guardian</string>

    <!-- Text to display in the list when there are no stories [CHAR LIMIT=NONE] -->
    <string name="no_stories">Currently there are no stories for you. You can always come later and check for all new stories.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>
    <string name="sampletitle">He relives it all again\': the lasting impact of detention on immigrant children</string>
    <string name="samplesection">US News</string>
    <string name="sampletype">Article</string>
    <string name="sampledate">2018-07-01</string>
    <string name="sampleauthor">by Samuel Gilbert</string>
    <string name="sampleurl">https://www.facebook.com</string>

</resources>
