<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/list_item"
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/storyinfo"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampletitle" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/storysection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/samplesection" />

            <TextView
                android:id="@+id/storytype"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sampletype" />

        </LinearLayout>
        <TextView
            android:id="@+id/storydate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampledate" />

        <TextView
            android:id="@+id/storyauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleauthor" />

        <TextView
            android:id="@+id/storyurl"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleurl" />


    </LinearLayout>

</LinearLayout>